<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_alignParentTop="true"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">


        <TextView
            android:text="@string/home"
            android:layout_gravity="center"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@color/white_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/mogadishu"
            android:textStyle="bold"
            android:textSize="42sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView

            android:text="@string/book"
            android:textStyle="bold"
            android:textSize="42sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/fair"
            android:textStyle="bold"
            android:textSize="42sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <androidx.recyclerview.widget.RecyclerView
               android:layout_width="match_parent"
               android:id="@+id/recyclerView"
               android:layout_centerInParent="true"
               android:layout_height="wrap_content" />
       </RelativeLayout>

    </LinearLayout>

</LinearLayout>